--- a/src/app/pages/quem-somos/quem-somos.component.html
+++ b/src/app/pages/quem-somos/quem-somos.component.html
@@ -1,178 +1,220 @@
 <div class="page">
-  <div class="header">
-    <div class="card">
-      <div class="logo">
-        <img src="../../../assets/imgs/starup-horizontal2@2x.png" alt="">
+  <div class="img-1">
+    <div class="header">
+      <div class="div-opcoes-header div-logo-header">
+        <img src="../../../assets/imgs/startup-horizontal@2x.png" alt="">
       </div>
 
-      <p-menubar [model]="items">
-      </p-menubar>
+      <div class="div-opcoes-header div-links-header">
+        <ul>
+          <li><a href="">HUB</a></li>
+          <li><a href="">STARTUPS</a></li>
+          <li><a href="">MANTENEDORES</a></li>
+          <li><a href="">SERVIÇOS</a></li>
+          <li><a href="">EVENTOS</a></li>
+          <li><a href="">BLOG</a></li>
+        </ul>
+      </div>
+      <div class="div-opcoes-header div-btn-login">
+        <button icon="pi pi-user" class="btn-login">
+          <img src="../../../assets/icons/user.png" alt=""> LOGIN </button>
+      </div>
     </div>
-  </div>
-  <div class="slice-1">
-    <div>
-      <div class="div-content-text">
-        <h2> O MAIOR HUB DO MATO GROSSO DO SUL </h2>
-        <label>HUB - STARTUP FIEMS</label>
-      </div>
 
-      <div class="card card1">
-        <div class="flex card-container indigo-container">
-          <div class="flex-1 font-bold text-center">
-            <div class="div-text-card1">
-              <h3> Traga seu negócio para o nosso ecossistema!</h3>
-            </div>
+    <div class="slice-1">
+      <div class="grid">
+        <div class="col-6 font-bold">
+          <div class="titulo">
+            <label>O maior Hub do Mato Grosso do Sul </label>
           </div>
-          <div class="flex-1 text-left">
-            <div class="div-text-card2">
-              <label class="text-base">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis id feugiat id tincidunt gravida non dui.
-                In
-                rhoncus eu, vitae amet sed. Ridiculus aliquam sed blandit tortor, dolor congue. Morbi ante ac habitasse
-                vitae
-                a eu vulputate sit.
-              </label>
-            </div>
+
+          <div class="subtitulo">
+            <label class="text-base">
+              Lorem ipsum dolor sit amet consectetur. Nec tincidunt blandit vitae a. Aliquam viverra tortor dolor etiam
+              aliquet adipiscing orci.
+            </label>
+          </div>
+
+          <div class="btn">
+            <button> Traga seu negócio! </button>
+          </div>
+          <div class="col-6 col-img">
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="slice-2">
-    <div>
-      <div class="div-content-text">
-        <h2> STARTUPS </h2>
-      </div>
-
-      <div class="card card1">
-        <div class="flex card-container indigo-container">
-          <div class="flex-1 text-left">
-            <div class="div-text-card1">
-              <label>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis id feugiat id tincidunt gravida non dui.
-                In
-                rhoncus eu, vitae amet sed. Ridiculus aliquam sed blandit tortor, dolor congue. Morbi ante ac habitasse
-                vitae
-                a eu vulputate sit.
-              </label>
-            </div>
+    <div class="slice-2">
+      <div class="grid">
+        <div class="col-6 font-bold">
+          <div class="titulo">
+            <label>Startups</label>
           </div>
-          <div class="flex-1 text-left">
-            <div class="div-text-card2">
-              <p-button label="FAÇA PARTE!" styleClass="p-button-rounded"></p-button>
-            </div>
+
+          <div class="subtitulo">
+            <label class="text-base font-normal">
+              O primeiro HUB de inovação aberta da indústria no Brasil. Nossa missão é conectar o ecossistema de
+              inovação à indústria, criando as melhores soluções para o setor e a sociedade. Queremos transformar as
+              indústrias e acelerar startups, para estimular o empreendedorismo inovador, aproximando pessoas e negócios
+              com o objetivo de impactar positivamente a economia de Mato Grosso do Sul.
+            </label>
+          </div>
+
+          <div class="btn">
+            <button> FAÇA PARTE! </button>
+          </div>
+          <div class="col-6 col-img">
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="slice-3">
-    <div>
-      <div class="div-content-text">
-        <h2> MANTENEDORES </h2>
-      </div>
-
-      <div class="card card1">
-        <div class="flex card-container indigo-container">
-          <div class="flex-1 text-left">
-            <div class="div-text-card1">
-              <label>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas in ut dui nulla non ut nam at. Quis
-                mauris quam at nisl massa euismod. Libero proin urna diam ut cras. Congue hac massa facilisis faucibus
-                tempus.
-              </label>
-            </div>
+    <div class="slice-3">
+      <div class="grid">
+        <div class="col-6 font-bold">
+          <div class="titulo">
+            <label>Mantenedores</label>
           </div>
-          <div class="flex-1 text-left">
-            <div class="div-text-card2">
-              <p-button label="CONSULTE-NOS!" styleClass="p-button-rounded"></p-button>
-            </div>
+
+          <div class="subtitulo">
+            <label class="text-base font-normal">
+              O primeiro HUB de inovação aberta da indústria no Brasil. Nossa missão é conectar o ecossistema de
+              inovação à indústria, criando as melhores soluções para o setor e a sociedade. Queremos transformar as
+              indústrias e acelerar startups, para estimular o empreendedorismo inovador, aproximando pessoas e negócios
+              com o objetivo de impactar positivamente a economia de Mato Grosso do Sul.
+            </label>
+          </div>
+
+          <div class="btn">
+            <button> CONSULTE-NOS! </button>
+          </div>
+          <div class="col-6 col-img">
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="slice-4">
-    <div class="cards">
-      <div class="card">
-        <div class="flex card-container">
-          <div class="flex-1 text-center divisor-1">
-            <div class="div-content-text">
-              <div class="img-slice4-card1"></div>
-              <div>
-                <div class="junte-se">
-                  <img src="../../../assets/icons/handshake.png" alt="teste">
-                  <h3> Junte-se ao nosso time!</h3>
-                </div>
-                <div class="button-candidatar">
-                  <p-button label="CANDIDATE-SE!" styleClass="p-button-rounded"></p-button>
-                </div>
+    <div class="slice-4">
+      <div class="grid">
+        <div class="col-7 slice-4-col-1">
+          <div class="titulo">
+            <label class="font-bold">Serviços</label>
+          </div>
+
+          <div class="subtitulo">
+            <label>
+              O Workshop LK Cursos 2023 será realizado nos dias 1 e 2 de julho de 2023 em Vitória de Santo Antão,
+              Pernambuco. O evento é voltado para profissionais técnicos em reparo de aparelhos celulares e tablets.
+              <br>
+              <br>
+              Serão 14 especialistas em reparos de aparelhos iPhone, aparelhos Android e também especialistas em reparo
+              de telas e troca de vidros que estarão presentes como palestrantes.
+            </label>
+          </div>
+
+          <div class="div-join">
+            <img src="../../../assets/imgs/startup-image.jpg" alt="">
+
+            <div class="join-text">
+              <label class="font-bold">Junte-se ao nosso time!</label>
+
+              <div class="subtitulo">
+                <label>
+                  Nossas equipes são formadas por desenvolvedores, analistas de negócios, designers, líderes de
+                  tecnologia
+                  e gestores de projeto.
+                </label>
+              </div>
+
+              <div class="btn">
+                <button>Candidate-se!</button>
+              </div>
+              <div class="col-6 col-img">
               </div>
             </div>
           </div>
-          <div class="flex-1 text-left">
-            <div class="divisor-2">
-              <div class="div-content-text">
-                <h2> Startup na mídia</h2>
+        </div>
 
-                <div class="cards-media">
-                  <div class="card-media" *ngFor="let media of listMedias">
-                    <div class="card-image">
-                      <img src="../../../assets/icons/image-gallery.png" alt="teste">
-                    </div>
-                    <div class="separator"></div>
-                    <div class="card-text">
-                      <h4><b>Título de chamada da matéria</b></h4>
-                      <label>Resumo sobre o que se trata matéria para captar o leitor.</label>
-                    </div>
+        <div class="col-5 slice-4-col-2">
+          <div class="div-startup">
+            <div class="titulo">
+              <h2> Startup na mídia</h2>
+
+              <div class="see-more">
+                <label><a href="">+ leia mais</a></label>
+              </div>
+            </div>
+            <div class="cards-media">
+              <div class="card-item" *ngFor="let media of listMedias">
+                <div class="flex">
+                  <div class="card-image">
+                    <img src="../../../assets/icons/image-gallery.png" alt="teste">
                   </div>
+                  <div class="card-text">
+                    <h4><b>{{media.title}}</b></h4>
+                    <label>{{media.text}}</label>
+                  </div>
+                  <br>
                 </div>
-                <div class="see-more">
-                  <label>Ver mais... </label>
-                </div>
+                <p-divider></p-divider>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="slice-5 footer">
+
+        <div class="grid">
+          <div class="col-3 col-img-sesi">
+            <img src="../../../assets/imgs/startup-white.png" alt="">
+
+            <div class="social-media">
+              <img src="../../../assets/icons/linkedin.png" alt="linkedin">
+              <img src="../../../assets/icons/instagram.png" alt="instagram">
+              <img src="../../../assets/icons/whatsapp.png" alt="whatsapp">
+            </div>
+          </div>
+
+          <div class="col-5 col-links">
+            <ul>
+              <li><a href="">Missão</a></li>
+              <li><a href="">Quem somos</a></li>
+              <li><a href="">A indústria</a></li>
+              <li><a href="">Trabalhe conosco</a></li>
+            </ul>
+
+            <ul>
+              <li><a href="">Eventos</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Contato</a></li>
+              <li><a href="">Termos da LGPD</a></li>
+            </ul>
+          </div>
+
+          <div class="col-4 col-subscribe">
+            <div>
+              <label>Inscreva-se na nossa newsletter</label>
+
+              <div class="div-input">
+                <div class="input-container">
+                  <input class="input-field" type="text" placeholder="Insira aqui seu e-mail">
+                  <i class="pi pi-comment" style="font-size: 2rem"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- <hr> -->
+
+        <div class="last-thing">
+          <label>© Startup Sesi MS. All rights reserved</label>
+
+          <div class="voltar-ao-topo">
+            <label>Voltar ao topo </label>
+            <i class="pi pi-arrow-up"></i>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-
-  <div class="slice-5">
-
-    <div class="grid">
-      <div class="col-4 col-img-sesi">
-        <img src="../../../assets/imgs/starup-horizontal2@2x.png" alt="">
-      </div>
-
-      <div class="col-5 col-links">
-        <ul>
-          <li><a href=""> Missão</a></li>
-          <li><a href=""> Quem somos</a></li>
-          <li><a href=""> A indústria</a></li>
-        </ul>
-
-        <ul>
-          <li><a href=""> Eventos</a></li>
-          <li><a href=""> Newsletter</a></li>
-          <li><a href=""> Blog</a></li>
-        </ul>
-
-        <ul>
-          <li><a href=""> Termos da LGPD</a></li>
-          <li><a href=""> Trabalhe conosco</a></li>
-        </ul>
-      </div>
-
-      <div class="col-3 col-social-media">
-        <label><a href=""> Contato</a> </label>
-        <img src="../../../assets/icons/linkedin.png" alt="linkedin">
-        <img src="../../../assets/icons/instagram.png" alt="instagram">
-        <img src="../../../assets/icons/whatsapp.png" alt="whatsapp">
-      </div>
-    </div>
-  </div>
-</div>
